🔧 Update gradle config

--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,21 @@
  * user guide available at https://docs.gradle.org/2.10/userguide/tutorial_java_projects.html
  */
 
-// Apply the java plugin to add support for Java
-apply plugin: 'java'
-apply plugin: 'application'
-apply plugin: 'org.hidetake.ssh'
+buildscript {
+    repositories {
+        jcenter()
+    }
+}
 
-// Global settingsl
+plugins {
+    id "org.hidetake.ssh" version "2.10.1"
+    id 'java'
+    id 'application'
+}
+
+// Global settings
 ssh.settings {
-  knownHosts = allowAnyHosts    // Disable host key verification
+  knownHosts = allowAnyHosts // Disable host key verification
 }
 
 mainClassName = 'com.nedap.university.Main'
@@ -25,16 +32,6 @@ jar {
         attributes 'Implementation-Title': 'Nedap University Module 2 Sample Project',
                 'Implementation-Version': version,
                 'Main-Class': mainClassName
-    }
-}
-
-
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'org.hidetake:gradle-ssh-plugin:2.8.0'
     }
 }
 
@@ -67,24 +64,3 @@ task deploy {
         }
     }
 }
-
-/*
-// In this section you declare where to find the dependencies of your project
-repositories {
-    // Use 'jcenter' for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
-}
-
-// In this section you declare the dependencies for your production and test code
-dependencies {
-    // The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.13'
-
-    // Declare the dependency for your favourite test framework you want to use in your tests.
-    // TestNG is also supported by the Gradle Test task. Just change the
-    // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
-    // 'test.useTestNG()' to your build script.
-    testCompile 'junit:junit:4.12'
-}
-*/
